--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -2,7 +2,7 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="../assets/images/searcher.svg" style="height:311px;">
+        <img class="activator" src="../assets/images/laptop.png" style="height:311px;">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{site.project_one}}<i class="material-icons right">more_vert</i></span>
@@ -18,7 +18,7 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="../assets/images/jekyll.png">
+        <img class="activator" src="../assets/images/laptop.png">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{site.project_two}}<i class="material-icons right">more_vert</i></span>
@@ -35,7 +35,7 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="../assets/images/turfy.png">
+        <img class="activator" src="../assets/images/laptop.png">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{site.project_three}}<i class="material-icons right">more_vert</i></span>
@@ -50,7 +50,7 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="../assets/images/pict.jpg"  style="height:399px;">
+        <img class="activator" src="../assets/images/laptop.png"  style="height:399px;">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{site.project_four}}<i class="material-icons right">more_vert</i></span>
@@ -59,7 +59,7 @@
       <div class="card-reveal">
         <span class="card-title grey-text text-darken-4">{{site.project_four}}<i class="material-icons right">close</i></span>
         <p>{{site.project_four_description}}</p>
-        <a class="waves-effect grey darken-2 z-depth-4 waves-light btn" href="https://pict-app.herokuapp.com/" target="_blank"><i class="material-icons right">photo_camera</i>Pict</a>
+        <a class="waves-effect grey darken-2 z-depth-4 waves-light btn" href="https://www.linkedin.com/in/gilbertanderson" target="_blank"><i class="material-icons right">photo_camera</i>Pict</a>
       </div>
     </div>
   </div>
