--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -2,7 +2,7 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="../assets/images/laptop.png" style="height:311px;">
+        <img class="activator" src="../assets/images/startup.jpg" style="height:311px;">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{site.project_one}}<i class="material-icons right">more_vert</i></span>
@@ -18,7 +18,7 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="../assets/images/laptop.png">
+        <img class="activator" src="../assets/images/typewriter.jpg">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{site.project_two}}<i class="material-icons right">more_vert</i></span>
@@ -50,7 +50,7 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="../assets/images/laptop.png"  style="height:399px;">
+        <img class="activator" src="../assets/images/laptop_red.jpg"  style="height:399px;">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{site.project_four}}<i class="material-icons right">more_vert</i></span>
