--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,17 +8,35 @@
       </div>
       <div class="card-content">
         <p style="font-size:50px">
-        <i class="devicon-amazonwebservices-original colored"></i>
+        <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+        <i class="devicon-angularjs-plain colored"></i>
         <i class="devicon-atom-original colored"></i>
+        <i class="devicon-babel-plain colored"></i>
         <i class="devicon-bootstrap-plain-wordmark colored"></i>
+        <i class="devicon-bower-line-wordmark colored"></i>        
+        <i class="devicon-chrome-plain-wordmark colored"></i>        
+        <i class="devicon-confluence-plain-wordmark colored"></i>
+        <i class="devicon-cplusplus-plain colored"></i>
+        <i class="devicon-css3-plain-wordmark colored"></i>
+        <i class="devicon-cucumber-plain-wordmark colored"></i>
+        <i class="devicon-docker-plain-wordmark colored"></i>
+        <i class="devicon-git-plain-wordmark colored"></i>
+        <i class="devicon-gitlab-plain-wordmark colored"></i>
         <i class="devicon-github-plain-wordmark colored"></i>
-        <i class="devicon-heroku-line-wordmark colored"></i>
+        <i class="devicon-grunt-plain-wordmark colored"></i>
+        <i class="devicon-html5-plain-wordmark colored"></i>
         <i class="devicon-javascript-plain colored"></i>
-        <i class="devicon-jquery-plain-wordmark colored"></i>
+        <i class="devicon-java-plain-wordmark colored"></i>
+        <i class="devicon-mongodb-plain-wordmark colored"></i>
         <i class="devicon-nodejs-plain colored"></i>
+        <i class="devicon-linux-plain colored"></i>
+        <i class="devicon-photoshop-line colored"></i>
         <i class="devicon-postgresql-plain-wordmark colored"></i>
+        <i class="devicon-python-plain-wordmark colored"></i>
         <i class="devicon-react-original-wordmark colored"></i>
+        <i class="devicon-typescript-plain colored"></i>
         <i class="devicon-ubuntu-plain-wordmark colored"></i>
+        <i class="devicon-visualstudio-plain colored"></i>
         <i class="devicon-wordpress-plain colored"></i>
 
       </p>
