--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -25,16 +25,21 @@
         <i class="devicon-github-plain-wordmark colored"></i>
         <i class="devicon-grunt-plain-wordmark colored"></i>
         <i class="devicon-html5-plain-wordmark colored"></i>
+        <i class="devicon-intellij-plain-wordmark colored"></i>
         <i class="devicon-javascript-plain colored"></i>
         <i class="devicon-java-plain-wordmark colored"></i>
         <i class="devicon-mongodb-plain-wordmark colored"></i>
+        <i class="devicon-mocha-plain colored"></i>
         <i class="devicon-nodejs-plain colored"></i>
         <i class="devicon-linux-plain colored"></i>
         <i class="devicon-photoshop-line colored"></i>
         <i class="devicon-postgresql-plain-wordmark colored"></i>
         <i class="devicon-python-plain-wordmark colored"></i>
         <i class="devicon-react-original-wordmark colored"></i>
+        <i class="devicon-sourcetree-plain colored"></i>
+        <i class="devicon-slack-plain colored"></i>
         <i class="devicon-typescript-plain colored"></i>
+        <i class="devicon-tomcat-line-wordmark colored"></i>
         <i class="devicon-ubuntu-plain-wordmark colored"></i>
         <i class="devicon-visualstudio-plain colored"></i>
         <i class="devicon-wordpress-plain colored"></i>
