--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -10,7 +10,7 @@
         <p style="font-size:50px">
         <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
         <i class="devicon-angularjs-plain colored"></i>
-        <i class="devicon-atom-original colored"></i>
+        <i class="devicon-atom-original-wordmark colored"></i>
         <i class="devicon-babel-plain colored"></i>
         <i class="devicon-bootstrap-plain-wordmark colored"></i>
         <i class="devicon-bower-line-wordmark colored"></i>        
