--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -10,7 +10,7 @@
         <p style="font-size:50px">
         <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
         <i class="devicon-angularjs-plain colored"></i>
-        <i class="devicon-atom-original-wordmark colored"></i>
+        <i class="devicon-atom-original colored"></i>
         <i class="devicon-babel-plain colored"></i>
         <i class="devicon-bootstrap-plain-wordmark colored"></i>
         <i class="devicon-bower-line-wordmark colored"></i>        
@@ -18,28 +18,28 @@
         <i class="devicon-confluence-plain-wordmark colored"></i>
         <i class="devicon-cplusplus-plain colored"></i>
         <i class="devicon-css3-plain-wordmark colored"></i>
-        <i class="devicon-cucumber-plain-wordmark colored"></i>
+        <i class="devicon-cucumber-plain colored"></i>
         <i class="devicon-docker-plain-wordmark colored"></i>
         <i class="devicon-git-plain-wordmark colored"></i>
         <i class="devicon-gitlab-plain-wordmark colored"></i>
         <i class="devicon-github-plain-wordmark colored"></i>
         <i class="devicon-grunt-plain-wordmark colored"></i>
         <i class="devicon-html5-plain-wordmark colored"></i>
-        <i class="devicon-intellij-plain-wordmark colored"></i>
+        <i class="devicon-intellij-plain colored"></i>
         <i class="devicon-ie10-original colored"></i>
         <i class="devicon-javascript-plain colored"></i>
         <i class="devicon-java-plain-wordmark colored"></i>
         <i class="devicon-mongodb-plain-wordmark colored"></i>
         <i class="devicon-mocha-plain colored"></i>
         <i class="devicon-nodejs-plain colored"></i>
-        <i class="devicon-linux-plain colored"></i>
+        <i class="devicon-linux-plain-wordmark colored"></i>
         <i class="devicon-photoshop-line colored"></i>
         <i class="devicon-postgresql-plain-wordmark colored"></i>
         <i class="devicon-protractor-plain colored"></i>
         <i class="devicon-python-plain-wordmark colored"></i>
         <i class="devicon-react-original-wordmark colored"></i>
         <i class="devicon-sourcetree-plain-wordmark  colored"></i>
-        <i class="devicon-slack-plain colored"></i>
+        <i class="devicon-slack-plain-wordmark colored"></i>
         <i class="devicon-swift-plain-wordmark colored"></i>
         <i class="devicon-typescript-plain colored"></i>
         <i class="devicon-tomcat-line-wordmark colored"></i>
