--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -45,6 +45,7 @@
         <i class="devicon-tomcat-line-wordmark colored"></i>
         <i class="devicon-ubuntu-plain-wordmark colored"></i>
         <i class="devicon-visualstudio-plain colored"></i>
+        <i class="devicon-webstorm-plain colored"></i>
         <i class="devicon-wordpress-plain colored"></i>
 
       </p>
