--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -12,6 +12,7 @@
         <span class="card-title grey-text text-darken-4">{{site.project_one}}<i class="material-icons right">close</i></span>
         <p>{{site.project_one_description}}
         Built using React Native.</p>
+        <a class="waves-effect grey darken-2 z-depth-4 waves-light btn" href="https://www.linkedin.com/in/gilbertanderson" target="_blank"><i class="material-icons right"></i>Linkedin</a>
       </div>
     </div>
   </div>
@@ -27,6 +28,7 @@
       <div class="card-reveal">
         <span class="card-title grey-text text-darken-4">{{site.project_two}}<i class="material-icons right">close</i></span>
         <p>{{site.project_two_description}}</p>
+        <a class="waves-effect grey darken-2 z-depth-4 waves-light btn" href="https://www.linkedin.com/in/gilbertanderson" target="_blank"><i class="material-icons right"></i>Linkedin</a>
       </div>
     </div>
   </div>
@@ -44,6 +46,7 @@
       <div class="card-reveal">
         <span class="card-title grey-text text-darken-4">{{site.project_three}}<i class="material-icons right">close</i></span>
         <p>{{site.project_three_description}}</p>
+        <a class="waves-effect grey darken-2 z-depth-4 waves-light btn" href="https://www.linkedin.com/in/gilbertanderson" target="_blank"><i class="material-icons right"></i>Linkedin</a>
       </div>
     </div>
   </div>
@@ -59,7 +62,7 @@
       <div class="card-reveal">
         <span class="card-title grey-text text-darken-4">{{site.project_four}}<i class="material-icons right">close</i></span>
         <p>{{site.project_four_description}}</p>
-        <a class="waves-effect grey darken-2 z-depth-4 waves-light btn" href="https://www.linkedin.com/in/gilbertanderson" target="_blank"><i class="material-icons right">photo_camera</i>Pict</a>
+        <a class="waves-effect grey darken-2 z-depth-4 waves-light btn" href="https://www.linkedin.com/in/gilbertanderson" target="_blank"><i class="material-icons right"></i>Linkedin</a>
       </div>
     </div>
   </div>
