--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,8 +10,8 @@
     </div>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Contact M<i size="large" class="material-icons right">close</i></span>
-    <form class="col s12" action="https://formspree.io/jameshamann0@gmail.com" method="POST">
+    <span class="card-title grey-text text-darken-4">Contact Me<i size="large" class="material-icons right">close</i></span>
+    <form class="col s12" action="https://formspree.io/gilbertandersonwork@gmail.com" method="POST">
       <div class="row">
         <div class="input-field col s6">
           <i class="material-icons prefix">account_circle</i>
