--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
   {% include cookies.html %}
 </div>
 
-<div class="container" style="padding:20px 10px 10px 20px;">
+<div class="container" style="padding:20px;">
   <div id="portfolio" class="section scrollspy">
   <h3 style="text-align:center;">Portfolio</h3>
   {% include portfolio_cards.html %}
